# appscreens

./: .env  .gitignore  Cargo.toml  Dioxus.toml  README.md  build_android.sh  check_android.sh  install_android.sh
assets/: main.css
src/: main.rs
