[package]
name = "appscreens"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
tokio = { version = "1", features = ["full"] }
rfd = "0.15"
dirs = "5"
tracing-subscriber = "0.3"
imageproc = "0.25"
ab_glyph = "0.2"
hex = "0.4"
urlencoding = "2"
